<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".wakthroughActivity.WalkThroughActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_walkthrough"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        tools:layout_conversion_absoluteHeight="659dp"
        tools:layout_conversion_absoluteWidth="411dp">

    </androidx.viewpager.widget.ViewPager>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorBackground_light">

        <TextView
            android:id="@+id/txt_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/txtFinish"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/tab_indicator2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tab_indicator2" />

        <TextView
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/txtSkip"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tab_indicator2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tab_indicator2" />

        <View
            android:id="@+id/tab_indicator1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/tab_indicator2"
            app:layout_constraintTop_toTopOf="@+id/tab_indicator2" />

        <View
            android:id="@+id/tab_indicator2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/tab_indicator3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tab_indicator2"
            app:layout_constraintStart_toEndOf="@+id/tab_indicator2"
            app:layout_constraintTop_toTopOf="@+id/tab_indicator2" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>